BUG: fix error where projects with no collapsed columns break the page + fix UI layout error where collapsed column component was not positioned on the right most end of te page when there were no kanban boards
CHORE: update EmptyKanban component to render the appropriate message when there are no tasks

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -162,6 +162,7 @@
   --shadow-lg: var(--shadow-lg);
   --shadow-xl: var(--shadow-xl);
   --shadow-2xl: var(--shadow-2xl);
+  --shadow-bottom-sides: 0px 8px 25px -15px oklch(0.3481 0.0219 67.0001);
 }
 
 body {
